src/core-crm/objects/Record_Type_Setting__mdt/Record_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Manages usage of record types for custom UI developments.</description>
    <label>Record Type Setting</label>
    <pluralLabel>Record Type Settings</pluralLabel>
</CustomObject>