src/core-crm/objects/Record_Type_Setting__mdt/fields/For_OPE__c.field-meta.xml
<CustomField>
    <fullName>For_OPE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if UI component is for OPE.</description>
    <label>For OPE?</label>
    <type>Checkbox</type>
</CustomField>