src/core-crm/objects/Record_Type_Setting__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Object of Record Type</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>