src/core-crm/objects/Record_Type_Setting__mdt/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <label>Parent Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>