src/core-crm/objects/Record_Type_Setting__mdt/listViews/CCE_Course.listView-meta.xml
<ListView>
    <fullName>CCE_Course</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Parent_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>hed__Course__c</value>
    </filters>
    <filters>
        <field>For_OPE__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CCE - Course</label>
</ListView>