src/core-crm/objects/Record_Type_Setting__mdt/listViews/CCE_Product_Request.listView-meta.xml
<ListView>
    <fullName>CCE_Product_Request</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Parent_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Product_Request__c</value>
    </filters>
    <label>CCE - Product Request</label>
</ListView>