src/core-crm/objects/Record_Type_Setting__mdt/listViews/Others.listView-meta.xml
<ListView>
    <fullName>Others</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Parent_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>notContain</operation>
        <value>All</value>
    </filters>
    <filters>
        <field>Object_Type__c</field>
        <operation>notEqual</operation>
        <value>hed__Course__c</value>
    </filters>
    <filters>
        <field>Object_Type__c</field>
        <operation>notEqual</operation>
        <value>Product_Request__c</value>
    </filters>
    <label>Others</label>
</ListView>